MainWindow implmnttn part1

--- a/BlitzStrike/nbproject/project.properties
+++ b/BlitzStrike/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=BlitzStrike
-main.class=blitzstrike.BlitzStrike
+main.class=blitzstrike.model.BlitzStrike
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
