updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /BlitzStrike/nbproject/private/
 /BlitzStrike/build/
+/BlitzStrike/nbbuild/
+/BlitzStrike/dist/
+/BlitzStrike/nbdist/
+/BlitzStrike/nbactions.xml
+/BlitzStrike/nb-configuration.xml
