--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ stages:          # List of stages for jobs, and their order of execution
 
 before_script:
   - apt-get update -qq
-  - apth-get install -yqq openjdk-11-jdk ant
+  - apt-get install -yqq openjdk-11-jdk ant
 
 build-program:
   stage: build
