--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,8 @@ stages:          # List of stages for jobs, and their order of execution
   # - test
 
 before_script:
-  - apt-get update -qq
-  - apt-get install -yqq openjdk-11-jdk ant
+  - export JAVA_HOME="C:\\Program Files\\Java\\jdk-20"
+  - export PATH=$JAVA_HOME/bin:$PATH
   - java -version
 
 build-program:
