Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
+image: openjdk
 
 stages:          # List of stages for jobs, and their order of execution
   - build
@@ -23,7 +24,7 @@ stages:          # List of stages for jobs, and their order of execution
 
 before_script:
   - apt-get update -qq
-  - apt-get install -yqq openjdk-11-jdk ant
+  - apt-get install -yqq ant
   - java -version
 
 build-program:
