--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,15 +16,15 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
-image: openjdk:20-jdk-alpine
+image: openjdk:20-jdk
 
 stages:          # List of stages for jobs, and their order of execution
   - build
   # - test
 
 before_script:
-  - apk update
-  - apk add --no-cache ant 
+  - apt-get update -qq
+  - apt-get install -yqq ant
   - java -version
 
 build-program:
