--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
-image: openjdk:20-jdk
+# image: openjdk:20-jdk
 
 stages:          # List of stages for jobs, and their order of execution
   - build
@@ -24,7 +24,7 @@ stages:          # List of stages for jobs, and their order of execution
 
 before_script:
   - apt-get update -qq
-  - apt-get install -yqq ant
+  - apt-get install -yqq openjdk:20-jdk ant
   - java -version
 
 build-program:
