--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,42 +37,17 @@ build-program:
       - dist/program.jar
     expire_in: 3 days
 
-junit_setup:
-  stage: build 
-  script:
-    - wget https://repo1.maven.org/maven2/junit/junit/4.14/junit-4.14.jar
+# junit_setup:
+#   stage: build 
+#   image: tudorfil9/junit_kata_v1
+#   sc
     
 
 test-program:
   stage: test
+  image: tudorfil9/junit_kata_v1
   script:
     - ant -buildfile BlitzStrike/build.xml compile-test
     - ant -buildfile BlitzStrike/build.xml test
 
 
-# build-job:       # This job runs in the build stage, which runs first.
-#   stage: build
-#   script:
-#     - echo "Compiling the code..."
-#     - echo "Compile complete."
-
-# unit-test-job:   # This job runs in the test stage.
-#   stage: test    # It only starts when the job in the build stage completes successfully.
-#   script:
-#     - echo "Running unit tests... This will take about 60 seconds."
-#     - sleep 60
-#     - echo "Code coverage is 90%"
-
-# lint-test-job:   # This job also runs in the test stage.
-#   stage: test    # It can run at the same time as unit-test-job (in parallel).
-#   script:
-#     - echo "Linting code... This will take about 10 seconds."
-#     - sleep 10
-#     - echo "No lint issues found."
-
-# deploy-job:      # This job runs in the deploy stage.
-#   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-#   environment: production
-#   script:
-#     - echo "Deploying application..."
-#     - echo "Application successfully deployed."
