Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,8 @@ build-program:
 
 test-program:
   stage: test
-  image: tudorfil9/junit_kata_v1
+  services:
+    - name: tudorfil9/junit_kata_v1
   script:
     - ant -buildfile BlitzStrike/build.xml compile-test
     - ant -buildfile BlitzStrike/build.xml test
