--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
-        <exec.mainClass>com.mycompany.mavenproject1.Mavenproject1</exec.mainClass>
+        <exec.mainClass>com.mycompany.blitzstrike.BlitzStrike</exec.mainClass>
     </properties>
 </project>
