--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,54 +1,8 @@
-# This file is a template, and might need editing before it works on your project.
-# This is a sample GitLab CI/CD configuration file that should run without any modifications.
-# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
-# it uses echo commands to simulate the pipeline execution.
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
-#
-# You can copy and paste this template into a new `.gitlab-ci.yml` file.
-# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
-#
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
-
 image: mbasso/disl-ci:openjdk-20
-#image: imagenarium/maven-jdk:20
 
-stages:          # List of stages for jobs, and their order of execution
+stages:
   - build
   - deploy
-  - test
-# # Build
-# build-job:
-#   stage: build
-#   script:
-#     - mvn compile
-
-# # Test
-# test-job:
-#   stage: test
-#   script:
-#     - mvn test
-
-# # deploy
-# deploy-job:
-#   stage: deploy
-#   script:
-#     - mvn install
-#   artifacts:
-#     paths:
-#       - target/*.jar
-
-
-# before_script:
-#   - apt-get update -qq
-#   - apt-get install -yqq ant
-#   - java -version
 
 build-program:
   stage: build
@@ -65,30 +19,8 @@ deploy-program:
       - dist/*.jar
     expire_in: 3 days
 
-test-program:
-  stage: test
-  script:
-    - apk add junit
-    - ant -buildfile BlitzStrike/build.xml test
-
-
-
-  
-
-
-# junit_setup:
-#   stage: build 
-#   image: tudorfil9/junit_kata_v1
-#   sc
-    
-
 # test-program:
 #   stage: test
-#   # services:
-#   #   - name: tudorfil9/junit_kata_v1
 #   script:
 #     - apk add junit
-#     - ant -buildfile BlitzStrike/build.xml compile-test
 #     - ant -buildfile BlitzStrike/build.xml test
-
-
